tests/golden/parser/accept/comments.rua
// leading comment
fn main() {
    /* nested /* inner */ comment */
    let value = 1; // trailing comment
}
