tests/golden/parser/reject/missing_brace.rua
fn main() {
    if true {
        let value = 1;
}
